<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tv_default"
        android:gravity="center"
        android:text="@string/choose_level"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLevelTest"
        style="@style/ButtonChooseLevel"
        android:text="@string/test" />

    <Button
        android:id="@+id/btnLevelEasy"
        style="@style/ButtonChooseLevel"
        android:backgroundTint="#8BC34A"
        android:text="@string/easy" />

    <Button
        android:id="@+id/btnLevelNormal"
        style="@style/ButtonChooseLevel"
        android:backgroundTint="#FFB73B"
        android:text="@string/normal" />

    <Button
        android:id="@+id/btnLevelHard"
        style="@style/ButtonChooseLevel"
        android:backgroundTint="#FF5722"
        android:text="@string/hard" />


</LinearLayout>
</layout>